Changed static ejs content

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,7 +1,7 @@
 <% layout ('./layouts/boilerplate') %>
 
 <h1>All Presentations</h1>
-<a href="/campgrounds/new">Add new Campground</a>
+<a href="/campgrounds/new">Add new Presentation</a>
 <% for (c of campgrounds) {%>
     <div class="card mb-3">
         <div class="row">
