Migrated code and did multiple code rewrites

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,10 +10,10 @@
             <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/campgrounds">Presentations</a>
+            <a class="nav-link" href="/presentations">Presentations</a>
           </li>
           <!-- <li class="nav-item">
-            <a class="nav-link" href="/campgrounds/new">Add new Campground</a> -->
+            <a class="nav-link" href="/presentations/new">Add new Campground</a> -->
           </li>
         </ul>
       </div>
