--- a/views/error.ejs
+++ b/views/error.ejs
@@ -5,7 +5,7 @@
             <h4 class="alert-heading"><%= err.message %> </h4>
             <p><%= err.stack %></p>
             <hr>
-            <p class="mb-0">Go back to <a href="/campgrounds">Our Campgrounds</a> </p>
+            <p class="mb-0">Go back to <a href="/presentations">All Presentations</a> </p>
           </div>
     </div>
 </div>
