--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,3 @@
 <% layout ('./layouts/boilerplate') %>
     <h1>Omdia Monthly Review</h1>
-    <a href="/campgrounds">All Presentations</a>
+    <a href="/presentations">All Presentations</a>
