--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer bg-dark py-3 mt-auto">
+<footer class="footer  py-3 mt-auto">
     <div class="container">
         <span class="text-muted">&copy Telecom Egypt 2025</span>
     </div>
