--- a/views/presentations/new.ejs
+++ b/views/presentations/new.ejs
@@ -35,7 +35,7 @@
         <button class=" mb-3 btn btn-success">Add Campground</button>
         <a class="mb-3 btn btn-secondary" href="/campgrounds">Cancel</a>
     </form>
-    <a href="/campgrounds">All Campgrounds</a>
+    <a href="/campgrounds">Go To All Campgrounds</a>
     </div>
 </div>
 
