--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,4 @@
 <% layout ('./layouts/boilerplate') %>
     <h1>Omdia Monthly Review</h1>
-    <a href="/presentations">All Presentations</a>
+    <a href="/presentations">All Presentations</a> <br>
+    <a href="/articles">All Articles</a>
