--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YelpCamp</title>
+    <title>WE Omdia Portal</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <style>
+    .article-link {
+    text-decoration: none;
+    color: inherit;
+    }
+    .article-link:hover .card {
+    box-shadow: 0 10px 12px rgba(0,0,0,0.15);
+    background-color: ghostwhite;
+    transition: box-shadow 0.5s ease;
+    
+    }
+    </style>
 </head>
 <body class="d-flex flex-column vh-100">
     <%- include('../partials/navbar') %>
