--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
-<nav class="navbar sticky-top navbar-expand-lg bg-body-tertiary navbar-dark bg-dark">
+<nav class="navbar sticky-top navbar-expand-md bg-body-tertiary  ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><img src="/imgs/logo.png" alt="Logo" style="width: 70px; max-width: 100px; height: auto;"></a>
+      <a class="navbar-brand" href="/"><img src="/imgs/logo.png" alt="Logo" style="width: 70px; max-width: 100px; height: auto;"> Omdia Portal</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -11,6 +11,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/presentations">Presentations</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/articles">Articles</a>
           </li>
           <!-- <li class="nav-item">
             <a class="nav-link" href="/presentations/new">Add new Campground</a> -->
