Modified dynamic routing for presentations show page

--- a/views/presentations/index.ejs
+++ b/views/presentations/index.ejs
@@ -8,9 +8,8 @@
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title"><%= p.title %> </h5>
-                    <p class="card-text"><%= p.description %></p>
                     <p class="card-text"> <small class="text-muted"><%= p.location %></small> </p>
-                    <a href="/presentations/<%= p.code %>" class="btn btn-primary">View Presentation</a>      
+                    <a href="/presentations/<%= p._id %>" class="btn btn-primary">View Presentation</a>      
                 </div>
                       </div>
           </div>
