--- a/views/presentations/show.ejs
+++ b/views/presentations/show.ejs
@@ -1,25 +1,9 @@
 <% layout ('./layouts/boilerplate') %>
-<div class="row">
-    <div class="col-md-6 offset-3">
-        <div class="card mb-3">
-            <img src="<%= campground.image %>" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title"><%= campground.title %> </h5>
-                <p class="card-text"><%= campground.description %></p>
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item"><b>$<%= campground.price %>/night</b> </li>
-                <li class="list-group-item text-muted">Location: <%= campground.location %></li>
-            </ul>
-            <div class="card-body">
-                <a class="card-link btn btn-warning" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-                <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-                    <button class="card-link btn btn-danger mx-2">Delete</button>
-                </form>
-            </div>
-            <div class="card-footer">
-                <a href="/campgrounds">Back to Campgrounds</a>
-            </div>
-        </div>
-    </div>
-</div>
+<h1><%= presentation.title %></h1>
+<% for (a of articles) {%>
+    <h3><%= a.title %></h3>
+    <p><%= a.p1 %></p>
+    <% for (i of a.img1URL) {%>
+    <img src="<%= i %>" alt="" style="width: 300px; align-self: center; margin: 20px;">
+    <% } %>
+<% } %>
