Added keyword search function that searches in domains, tags, article text, and title fields. Addedthe search bar in navbar. Added links for articles tags, domains, and presentation month in the article show page. Changed layout of article title in show page

--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -1,8 +1,48 @@
 <% layout ('./layouts/boilerplate') %>
 
 
-    <h3><%= article.title %></h3>
+    <div class="card mb-4 shadow-sm">
+        <div class="card-body">
+            <h2 class="card-title">
+                <a href="/articles/<%= article._id %>" class="text-decoration-none text-dark">
+                    <%= article.title %>
+                </a>
+            </h2>
+
+            <div class="mb-2">
+            Tags:<% article.tags.forEach(tag => { %>
+                <a href="/articles?tags=<%= tag %>" class="badge bg-primary text-decoration-none me-1">
+                #<%= tag %>
+                </a>
+            <% }) %>
+            </div>
+
+
+            <div class="mb-2">
+            Domain: <% article.domains.forEach(domain => { %>
+                <a href="/articles?domains=<%= domain %>" class="badge bg-secondary text-decoration-none me-1">
+                <%= domain %>
+                </a>
+            <% }) %>
+            </div>
+
+            <div class="mb-2">
+            Presentation: 
+                <a href="/presentations/<%= presentation._id %>" class="badge bg-success text-decoration-none me-1">
+                <%= presentation.title %>
+                </a>
+            </div>
+
+        </div>
+    </div>
+
     <p><%= article.p1 %></p>
-    <% for (let i of article.img1URL) {%>
-    <img src="<%= i %>" alt="" style="width: 300px; justify-content: center; margin: 20px;">
-    <% } %>
+    <div class="container">
+        <div class="d-flex justify-content-center ">
+        <% for (let i of article.img1URL) {%>
+            <div class="col-auto">
+                <img src="<%= i %>" alt="" class="img-fluid rounded" style="max-height: 300px; margin: 20px; object-fit: contain;">
+            </div>
+        <% } %>
+        </div>
+     </div>
