--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -13,9 +13,12 @@
     .article-link:hover .card {
     box-shadow: 0 10px 12px rgba(0,0,0,0.15);
     background-color: ghostwhite;
-    transition: box-shadow 0.5s ease;
-    
+    transition: box-shadow 0.3s ease;
     }
+    a.badge:hover {
+    opacity: 0.83;
+    transition: 0.3s ease;
+      }
     </style>
 </head>
 <body class="d-flex flex-column vh-100">
