--- a/views/presentations/show.ejs
+++ b/views/presentations/show.ejs
@@ -1,5 +1,5 @@
 <% layout ('./layouts/boilerplate') %>
-<h1><%= presentation.title %></h1>
+<h1><%= presentation.title %> Omdia Review</h1>
 <% for (a of articles) {%>
     <h3><%= a.title %></h3>
     <p><%= a.p1 %></p>
