--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,24 +1,37 @@
 <nav class="navbar sticky-top navbar-expand-md bg-body-tertiary  ">
     <div class="container-fluid">
       <a class="navbar-brand" href="/"><img src="/imgs/logo.png" alt="Logo" style="width: 70px; max-width: 100px; height: auto;"> Omdia Portal</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+      
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="/">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/presentations">Presentations</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="/articles">Articles</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/presentations">Presentations</a>
+          </li>
+          </div>
+            <form class="d-flex ms-auto" action="/articles" method="GET">
+            <input
+              class="form-control me-2"
+              type="search"
+              name="search"
+              placeholder="Search articles..."
+              value="<%= (typeof query !== 'undefined' && query.search) ? query.search : '' %>"
+              aria-label="Search"
+            >
+            <button class="btn btn-outline-success" type="submit">Search</button>
+          </form>
+          <button class="navbar-toggler mx-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
           <!-- <li class="nav-item">
             <a class="nav-link" href="/presentations/new">Add new Campground</a> -->
-          </li>
+          <!-- </li> -->
         </ul>
-      </div>
+      
     </div>
   </nav>
