--- a/views/presentations/index.ejs
+++ b/views/presentations/index.ejs
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title"><%= p.title %> </h5>
+                    <h5 class="card-title"><%= p.title %> Omdia Review</h5>
                     <p class="card-text"> <small class="text-muted"><%= p.location %></small> </p>
                     <a href="/presentations/<%= p._id %>" class="btn btn-primary">View Presentation</a>      
                 </div>
