--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -21,9 +21,9 @@
       }
     </style>
 </head>
-<body class="d-flex flex-column vh-100">
+<body class="d-flex flex-column vh-100 container mx-">
     <%- include('../partials/navbar') %>
-    <main class="container my-3">
+    <main class="container my-3 w-75">
         <%- body %>
     </main>
     <%- include('../partials/footer') %>
