--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer  py-3 mt-auto">
     <div class="container">
-        <span class="text-muted">&copy Telecom Egypt 2025</span>
+        <span class="text-muted">&copy Telecom Egypt 2025 All Rights Reserved</span>
     </div>
 </footer>
