--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
-<nav class="navbar sticky-top navbar-expand-md bg-body-tertiary  ">
+<nav class="navbar sticky-top navbar-expand-md bg-body-tertiary ">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><img src="/imgs/logo.png" alt="Logo" style="width: 70px; max-width: 100px; height: auto;"> Omdia Portal</a>
+      <a class="navbar-brand" href="/" style="color: rgb(45, 0, 87);"><img src="/imgs/logo.png" alt="Logo" style="width: 70px; max-width: 100px; height: auto;"> Omdia Portal</a>
       
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
